Allow JVM reflection to fix JDK 17 changes.
Certain reflection (used by JAXB) isn't allowed by default in JDK 17. See https://docs.oracle.com/en/java/javase/17/migrate/migrating-jdk-8-later-jdk-releases.html#GUID-7BB28E4D-99B3-4078-BDC4-FC24180CE82B.

Fixes #676.

The added JVM flags are ignored by earlier JVMs.